V.[ 0.3.0 ] adiciona Loader, validação de usuários, e operações CRUD com axios.

--- a/react-consume-api-model/src/styles/style.css
+++ b/react-consume-api-model/src/styles/style.css
@@ -43,6 +43,10 @@ button {
     border: 1px solid #eee;
     background-color: #ff0000;
   }
+  &.full-size {
+    width: 88%;
+    margin-top: 3rem;
+  }
 }
 
 .FaBorder {
